# NclNitroApi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
dep/easyloggingpp/src/: easylogging++.cc  easylogging++.h
dep/nitro_utils/: CMakeLists.txt
dep/nitro_utils/dep/proc_maps_parser/: pmparser.cpp
dep/nitro_utils/dep/proc_maps_parser/include/: pmparser.h
dep/nitro_utils/include/nitro_utils/: MemoryTools.h  MemoryToolsEx.h  PtrValidator.h  char_utils.h  config_utils.h  high_resolution_counter.h  net_utils.h  platform.h  poor_reflection_utils.h  random_utils.h  string_utils.h  transparent_string_lookup.h
dep/nitro_utils/include/nitro_utils/config/: ConfigProviderInterface.h  FileConfigProvider.h
dep/nitro_utils/include/nitro_utils/platform/: platform_linux.h
dep/nitro_utils/src/: MemoryTools.cpp  MemoryToolsEx.cpp  high_resolution_counter.cpp  net_utils.cpp  random_utils.cpp  string_utils.cpp
dep/nitro_utils/src/config/: FileConfigProvider.cpp
dep/nitro_utils/src/platform/: platform_linux.cpp  platform_win32.cpp
include/nitroapi/: BuildVersion.h  ChainExtensions.h  Concepts.h  GlobalExceptionHandler.h  NitroApiHelper.h  NitroApiInterface.h  NitroFunction.h  cdll_export.h
include/nitroapi/chain/: HandlersChainBaseInterface.h  HandlersChainInterface.h  Unsubscriber.h
include/nitroapi/handler_helper/: Handler.h
include/nitroapi/hook/: CallingConventions.h  GenericHookInterface.h  HookInterface.h  StaticHookId.h
include/nitroapi/modules/client/: ClientData.h
include/nitroapi/modules/client/cl_dll/: ammo.h  health.h  hud.h  hud_spectator.h  interpolation.h
include/nitroapi/modules/engine/: EngineData.h  IEngine.h  enginemsg.h  structs.h  voice.h
include/nitroapi/modules/sdl2/: SDL2Data.h
include/nitroapi/modules/windows/: WindowsData.h
include/nitroapi/utility/: ContainerWithHandles.h
src/: AddressProviderBase.cpp  AddressProviderBase.h  ChainExtensions.cpp  HookStorage.h  LibraryHookListener.h  NitroApi.cpp  NitroApi.h  SearchConfig.cpp  SearchConfig.h  profiler.h  seh_platform.h
src/chain/: HandlersChain.h
src/hook/: GenericHookJit.h  GenericHookStatic.h  GenericHookVaformatStatic.h
src/modules/: ModuleBase.cpp  ModuleBase.h
src/modules/client/: ClientAddressProvider8684Linux.cpp  ClientAddressProvider8684Linux.h  ClientAddressProvider8684Windows.cpp  ClientAddressProvider8684Windows.h  ClientModule.cpp  ClientModule.h
src/modules/engine/: EngineAddressProvider8684Linux.cpp  EngineAddressProvider8684Linux.h  EngineAddressProvider8684Windows.cpp  EngineAddressProvider8684Windows.h  EngineModule.cpp  EngineModule.h  enginemsg_utils.cpp  enginemsg_utils.h
src/modules/sdl2/: SDL2AddressProvider.cpp  SDL2AddressProvider.h  SDL2Module.cpp  SDL2Module.h
src/modules/windows/: WindowsModule.cpp  WindowsModule.h
